[REFAC] import and paths updates, after changes made on the project tree

--- a/examples/notebooks/reproduction_4TQ6.ipynb
+++ b/examples/notebooks/reproduction_4TQ6.ipynb
@@ -30,7 +30,7 @@
     "from os.path import join as opj\n",
     "import os\n",
     "import json\n",
-    "from lib import pipelines_4TQ6_wip"
+    "from narps_open.pipelines import team_4TQ6_wip"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis= pipelines_4TQ6_wip.get_l1_analysis(subject_list, run_list, \n",
+    "l1_analysis= team_4TQ6_wip.get_l1_analysis(subject_list, run_list, \n",
     "                                            TR, fwhm, exp_dir, output_dir, \n",
     "                                            working_dir, result_dir)"
    ]
@@ -356,7 +356,7 @@
    "outputs": [],
    "source": [
     "contrast_list = ['1', '2']\n",
-    "l2_analysis = pipelines_4TQ6_wip.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
+    "l2_analysis = team_4TQ6_wip.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
     "                                             output_dir, working_dir, result_dir, data_dir)"
    ]
   },
@@ -387,14 +387,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l3_analysis_equalRange = pipelines_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, output_dir, \n",
+    "l3_analysis_equalRange = team_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, output_dir, \n",
     "                       working_dir, result_dir, data_dir)\n",
     "\n",
-    "l3_analysis_equalIndiff = pipelines_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
+    "l3_analysis_equalIndiff = team_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
     "                       exp_dir, output_dir, \n",
     "                       working_dir, result_dir, data_dir)\n",
     "\n",
-    "l3_analysis_groupComp = pipelines_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
+    "l3_analysis_groupComp = team_4TQ6_wip.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
     "                                                         output_dir, working_dir, result_dir, data_dir)"
    ]
   },
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_4TQ6_wip.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_4TQ6_wip.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -457,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
