--- a/examples/notebooks/reproduction_98BT.ipynb
+++ b/examples/notebooks/reproduction_98BT.ipynb
@@ -38,7 +38,7 @@
     "from nipype.interfaces import spm\n",
     "matlab_cmd = '/local/egermani/spm12/run_spm12.sh /usr/local/MATLAB/R2018a/bin/matlab script'\n",
     "spm.SPMCommand.set_mlab_paths(matlab_cmd=matlab_cmd)\n",
-    "from lib import pipelines_98BT"
+    "from narps_open.pipelines import team_98BT"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dartel_wf = pipelines_98BT.get_dartel_template_wf(exp_dir, result_dir, working_dir, output_dir, subject_list)\n",
+    "dartel_wf = team_98BT.get_dartel_template_wf(exp_dir, result_dir, working_dir, output_dir, subject_list)\n",
     "\n",
     "dartel_wf.run()"
    ]
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessing = pipelines_98BT.get_preprocessing(exp_dir, result_dir, working_dir, output_dir,\n",
+    "preprocessing = team_98BT.get_preprocessing(exp_dir, result_dir, working_dir, output_dir,\n",
     "                                                 subject_list, run_list, fwhm, N, ST, TA, TR, total_readout_time)\n",
     "\n",
     "preprocessing.run()"
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis = pipelines_98BT.get_l1_analysis(subject_list, TR, run_list, exp_dir, result_dir, \n",
+    "l1_analysis = team_98BT.get_l1_analysis(subject_list, TR, run_list, exp_dir, result_dir, \n",
     "                                             working_dir, output_dir)\n",
     "\n",
     "l1_analysis.run()"
@@ -180,14 +180,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equalRange = pipelines_98BT.get_l2_analysis(subject_list, n_sub, contrast_list,\n",
+    "l2_analysis_equalRange = team_98BT.get_l2_analysis(subject_list, n_sub, contrast_list,\n",
     "                                                        'equalRange', exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
-    "l2_analysis_equalIndiff = pipelines_98BT.get_l2_analysis(subject_list, n_sub, contrast_list,\n",
+    "l2_analysis_equalIndiff = team_98BT.get_l2_analysis(subject_list, n_sub, contrast_list,\n",
     "                                                        'equalIndifference', exp_dir, result_dir, \n",
     "                                                         working_dir, output_dir)\n",
     "\n",
-    "l2_analysis_groupComp = pipelines_98BT.get_l2_analysis(subject_list, n_sub, contrast_list,\n",
+    "l2_analysis_groupComp = team_98BT.get_l2_analysis(subject_list, n_sub, contrast_list,\n",
     "                                                        'groupComp', exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_98BT.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_98BT.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
