--- a/examples/notebooks/reproduction_R9K3.ipynb
+++ b/examples/notebooks/reproduction_R9K3.ipynb
@@ -77,8 +77,8 @@
     "import os\n",
     "import json\n",
     "from os.path import join as opj\n",
-    "from lib import pipelines_R9K3_wip\n",
-    "from lib import utils"
+    "from narps_open.pipelines import team_R9K3_wip\n",
+    "from narps_open import utils"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessing = pipelines_R9K3_wip.get_preprocessing(\n",
+    "preprocessing = team_R9K3_wip.get_preprocessing(\n",
     "    exp_dir= cfg[\"directories\"][\"exp\"],\n",
     "    result_dir= cfg[\"directories\"][\"result\"],\n",
     "    working_dir= cfg[\"directories\"][\"working\"],\n",
@@ -350,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
