--- a/examples/notebooks/reproduction_V55J.ipynb
+++ b/examples/notebooks/reproduction_V55J.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib import pipelines_V55J\n",
+    "from narps_open.pipelines import team_V55J\n",
     "\n",
     "from os.path import join as opj\n",
     "import os\n",
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_indiff = pipelines_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", exp_dir, result_dir, working_dir, output_dir)\n",
+    "l2_analysis_equal_indiff = team_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
     "l2_analysis_equal_indiff.run('MultiProc', plugin_args={'n_procs': 16})"
    ]
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_range = pipelines_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalRange\", exp_dir, result_dir, working_dir, output_dir)\n",
+    "l2_analysis_equal_range = team_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalRange\", exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
     "l2_analysis_equal_range.run('MultiProc', plugin_args={'n_procs': 16})"
    ]
@@ -165,7 +165,7 @@
     "contrast_list = ['02']\n",
     "method = 'groupComp'\n",
     "\n",
-    "l2_analysis_groupcomp = pipelines_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"groupComp\", \n",
+    "l2_analysis_groupcomp = team_V55J.get_l2_analysis(subject_list, n_sub, contrast_list, \"groupComp\", \n",
     "                  exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
     "\n",
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_V55J.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_V55J.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -199,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
