--- a/examples/notebooks/reproduction_C88N.ipynb
+++ b/examples/notebooks/reproduction_C88N.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib import pipelines_C88N\n",
+    "from narps_open.pipelines import team_C88N\n",
     "import os\n",
     "from os.path import join as opj\n",
     "import json"
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis = pipelines_C88N.get_l1_analysis(subject_list, TR, \n",
+    "l1_analysis = team_C88N.get_l1_analysis(subject_list, TR, \n",
     "                                             fwhm, run_list, exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -154,17 +154,17 @@
     "model_list = [\"gain\", \"loss\"]\n",
     "contrast_list = [\"1\"]\n",
     "\n",
-    "l2_analysis_equalRange = pipelines_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
+    "l2_analysis_equalRange = team_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
     "                                                        \"equalRange\", exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
-    "l2_analysis_equalIndiff = pipelines_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
+    "l2_analysis_equalIndiff = team_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
     "                                                         \"equalIndifference\", exp_dir, result_dir, working_dir, \n",
     "                                                         output_dir)\n",
     "\n",
     "model_list = [\"loss\"]\n",
     "contrast_list = [\"1\"]\n",
     "\n",
-    "l2_analysis_groupComp = pipelines_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
+    "l2_analysis_groupComp = team_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
     "                                                       \"groupComp\", exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -212,10 +212,10 @@
     "model_list = [\"loss\"]\n",
     "contrast_list = [\"2\"]\n",
     "\n",
-    "l2_analysis_equalRange = pipelines_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
+    "l2_analysis_equalRange = team_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
     "                                                        \"equalRange\", exp_dir, result_dir, working_dir, output_dir)\n",
     "\n",
-    "l2_analysis_equalIndiff = pipelines_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
+    "l2_analysis_equalIndiff = team_C88N.get_l2_analysis(subject_list, n_sub, model_list, contrast_list, \n",
     "                                                         \"equalIndifference\", exp_dir, result_dir, working_dir, \n",
     "                                                         output_dir)"
    ]
@@ -249,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "pipelines_C88N.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_C88N.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
