--- a/examples/notebooks/reproduction_J7F9.ipynb
+++ b/examples/notebooks/reproduction_J7F9.ipynb
@@ -30,7 +30,7 @@
     "from os.path import join as opj\n",
     "import os\n",
     "import json\n",
-    "from lib import pipelines_J7F9"
+    "from narps_open.pipelines import team_J7F9"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1.analysis = pipelines_J7F9.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, result_dir, \n",
+    "l1.analysis = team_J7F9.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, result_dir, \n",
     "                                             working_dir, output_dir)"
    ]
   },
@@ -137,13 +137,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equalRange = pipelines_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, \n",
+    "l2_analysis_equalRange = team_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, \n",
     "                                                        result_dir, working_dir, output_dir, data_dir)\n",
     "\n",
-    "l2_analysis_equalIndiff = pipelines_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
+    "l2_analysis_equalIndiff = team_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
     "                                                         exp_dir, result_dir, working_dir, output_dir, data_dir)\n",
     "\n",
-    "l2_analysis_groupComp = pipelines_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'groupComp', exp_dir, \n",
+    "l2_analysis_groupComp = team_J7F9.get_l2_analysis(subject_list, n_sub, contrast_list, 'groupComp', exp_dir, \n",
     "                                                        result_dir, working_dir, output_dir, data_dir)"
    ]
   },
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_J7F9.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_J7F9.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -204,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
