--- a/examples/notebooks/reproduction_Q6O0.ipynb
+++ b/examples/notebooks/reproduction_Q6O0.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib import pipelines_Q6O0\n",
+    "from narps_open.pipelines import team_Q6O0\n",
     "\n",
     "from os.path import join as opj\n",
     "import os\n",
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis = pipelines_Q6O0.get_l1_analysis(subject_list, TR, fwhm, run_list, \n",
+    "l1_analysis = team_Q6O0.get_l1_analysis(subject_list, TR, fwhm, run_list, \n",
     "                                             exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -148,7 +148,7 @@
     "model_list = ['gain', 'loss']\n",
     "method = \"equalRange\"\n",
     "\n",
-    "l2_analysis = pipelines_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, method, \n",
+    "l2_analysis = team_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, method, \n",
     "                                             exp_dir, result_dir, working_dir, output_dir)"
    ]
   },
@@ -172,7 +172,7 @@
     "model_list = ['gain', 'loss']\n",
     "method = \"equalIndifference\"\n",
     "\n",
-    "l2_analysis_equalIndifference = pipelines_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, \"equalIndifference\", exp_dir, \n",
+    "l2_analysis_equalIndifference = team_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, \"equalIndifference\", exp_dir, \n",
     "                                             result_dir, working_dir, output_dir)"
    ]
   },
@@ -196,7 +196,7 @@
     "model_list = ['loss']\n",
     "method = \"groupComp\"\n",
     "\n",
-    "l2_analysis_groupComp = pipelines_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, method, exp_dir, \n",
+    "l2_analysis_groupComp = team_Q6O0.get_l2_analysis(subject_list, n_sub, model_list, method, exp_dir, \n",
     "                                             result_dir, working_dir, output_dir)"
    ]
   },
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_Q6O0.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_Q6O0.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -239,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
