--- a/examples/notebooks/reproduction_T54A.ipynb
+++ b/examples/notebooks/reproduction_T54A.ipynb
@@ -30,7 +30,7 @@
     "from os.path import join as opj\n",
     "import os\n",
     "import json\n",
-    "from lib import pipelines_T54A"
+    "from narps_open.pipelines import team_T54A"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis= pipelines_T54A.get_l1_analysis(subject_list, run_list, \n",
+    "l1_analysis= team_T54A.get_l1_analysis(subject_list, run_list, \n",
     "                                            TR, fwhm, exp_dir, output_dir, \n",
     "                                            working_dir, result_dir)"
    ]
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "contrast_list = ['1', '2']\n",
-    "l2_analysis = pipelines_T54A.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
+    "l2_analysis = team_T54A.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
     "                                             output_dir, working_dir, result_dir, data_dir)"
    ]
   },
@@ -190,14 +190,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l3_analysis_equalRange = pipelines_T54A.get_group_workflow(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, output_dir, \n",
+    "l3_analysis_equalRange = team_T54A.get_group_workflow(subject_list, n_sub, contrast_list, 'equalRange', exp_dir, output_dir, \n",
     "                       working_dir, result_dir, data_dir)\n",
     "\n",
-    "l3_analysis_equalIndiff = pipelines_T54A.get_group_workflow(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
+    "l3_analysis_equalIndiff = team_T54A.get_group_workflow(subject_list, n_sub, contrast_list, 'equalIndifference', \n",
     "                       exp_dir, output_dir, \n",
     "                       working_dir, result_dir, data_dir)\n",
     "\n",
-    "l3_analysis_groupComp = pipelines_T54A.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
+    "l3_analysis_groupComp = team_T54A.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
     "                                                         output_dir, working_dir, result_dir, data_dir)"
    ]
   },
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_T54A.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_T54A.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
