--- a/examples/notebooks/reproduction_X19V.ipynb
+++ b/examples/notebooks/reproduction_X19V.ipynb
@@ -30,7 +30,7 @@
     "from os.path import join as opj\n",
     "import os\n",
     "import json\n",
-    "from lib import pipelines_X19V"
+    "from narps_open.pipelines import team_X19V"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis = pipelines_X19V.get_l1_analysis(subject_list, run_list, TR, fwhm, exp_dir, \n",
+    "l1_analysis = team_X19V.get_l1_analysis(subject_list, run_list, TR, fwhm, exp_dir, \n",
     "                                             output_dir, working_dir, result_dir)"
    ]
   },
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis = pipelines_X19V.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
+    "l2_analysis = team_X19V.get_l2_analysis(subject_list, contrast_list, run_list, exp_dir, \n",
     "                                             output_dir, working_dir, result_dir)"
    ]
   },
@@ -189,12 +189,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l3_analysis_equalRange = pipelines_X19V.get_group_workflow(subject_list, n_sub, contrast_list, \"equalRange\", exp_dir, \n",
+    "l3_analysis_equalRange = team_X19V.get_group_workflow(subject_list, n_sub, contrast_list, \"equalRange\", exp_dir, \n",
     "                                             output_dir, working_dir, result_dir, data_dir)\n",
     "\n",
-    "l3_analysis_equalIndiff = pipelines_X19V.get_group_workflow(subject_list, n_sub, contrast_list, \"equalIndifference\", \n",
+    "l3_analysis_equalIndiff = team_X19V.get_group_workflow(subject_list, n_sub, contrast_list, \"equalIndifference\", \n",
     "                                                            exp_dir, output_dir, working_dir, result_dir, data_dir)\n",
-    "l3_analysis_groupComp = pipelines_X19V.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
+    "l3_analysis_groupComp = team_X19V.get_group_workflow(subject_list, n_sub, contrast_list, \"groupComp\", exp_dir, \n",
     "                                                         output_dir, working_dir, result_dir, data_dir)"
    ]
   },
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipelines_X19V.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "team_X19V.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
    ]
   }
  ],
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
