--- a/examples/notebooks/reproduction_X19V.ipynb
+++ b/examples/notebooks/reproduction_X19V.ipynb
@@ -27,9 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import join as opj\n",
     "from pathlib import Path\n",
-    "import json\n",
     "from narps_open.pipelines import team_X19V_new"
    ]
   },
@@ -52,7 +50,7 @@
     "exp_dir = root_dir / \"original\" / \"ds001734\"\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = root_dir / \"derived\" / \"reproduced\"\n",
+    "results_dir = root_dir / \"derived\" / \"reproduced\"\n",
     "\n",
     "## output_dir : where the final results will be store\n",
     "output_dir = f\"NARPS-{team_ID}-reproduced\"\n",
@@ -98,22 +96,9 @@
     "subject_list = [dirs.stem[-3:] for dirs in exp_dir.iterdir() if dirs.stem[:3] == \"sub\"]\n",
     "\n",
     "if DEBUG:\n",
-    "    subject_list = [\n",
-    "        \"001\"\n",
-    "    ]\n",
+    "    subject_list = [\"001\"]\n",
     "\n",
-    "print(f\"Found {len(subject_list)} subjects\")\n",
-    "\n",
-    "# Run to use for this analysis\n",
-    "run_list = [\"01\", \"02\", \"03\", \"04\"]\n",
-    "\n",
-    "# TR\n",
-    "with open(opj(exp_dir, \"task-MGT_bold.json\"), \"rt\") as fp:\n",
-    "    task_info = json.load(fp)\n",
-    "TR = task_info[\"RepetitionTime\"]\n",
-    "\n",
-    "# FWHM to smooth\n",
-    "fwhm = 5"
+    "print(f\"Found {len(subject_list)} subjects\")"
    ]
   },
   {
@@ -123,8 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contrast_list = [\"1\", \"2\", \"3\", \"4\"]\n",
-    "n_sub = len(subject_list)"
+    "contrast_list = [\"1\", \"2\", \"3\", \"4\"]"
    ]
   },
   {
@@ -134,17 +118,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = team_X19V_new.PipelineTeamX19V()\n",
+    "pipeline = team_X19V_new.PipelineTeamX19V(bids_dir=exp_dir, subject_list=subject_list)\n",
+    "pipeline.directories.results_dir = results_dir\n",
+    "pipeline.directories.set_output_dir_with_team_id(pipeline.team_id)\n",
+    "pipeline.directories.set_working_dir_with_team_id(pipeline.team_id)\n",
     "\n",
-    "l1_analysis = pipeline.get_subject_level_analysis(\n",
-    "    subject_list=subject_list,\n",
-    "    run_list=run_list,\n",
-    "    TR=TR,\n",
-    "    exp_dir=str(exp_dir),\n",
-    "    output_dir=str(output_dir),\n",
-    "    working_dir=str(working_dir),\n",
-    "    result_dir=str(result_dir),\n",
-    ")"
+    "l1_analysis = pipeline.get_subject_level_analysis()"
    ]
   },
   {
@@ -176,8 +155,14 @@
    "source": [
     "# Visualize graph\n",
     "from IPython.display import Image\n",
-    "l1_analysis.write_graph(graph2use='orig')\n",
-    "Image(filename=result_dir / working_dir / \"l1_analysis\" / \"graph.png\")"
+    "\n",
+    "l1_analysis.write_graph(graph2use=\"orig\")\n",
+    "Image(\n",
+    "    filename=pipeline.directories.results_dir\n",
+    "    / working_dir\n",
+    "    / \"l1_analysis\"\n",
+    "    / \"graph.png\"\n",
+    ")"
    ]
   },
   {
