add test for group level workflow

--- a/examples/notebooks/reproduction_X19V.ipynb
+++ b/examples/notebooks/reproduction_X19V.ipynb
@@ -387,15 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis = team_X19V.get_l2_analysis(\n",
-    "    subject_list,\n",
-    "    contrast_list,\n",
-    "    run_list,\n",
-    "    str(exp_dir),\n",
-    "    str(output_dir),\n",
-    "    str(working_dir),\n",
-    "    str(result_dir),\n",
-    ")"
+    "l2_analysis = pipeline.get_l2_analysis()"
    ]
   },
   {
@@ -435,39 +427,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l3_analysis_equalRange = team_X19V.get_group_workflow(\n",
-    "    subject_list,\n",
-    "    n_sub,\n",
-    "    contrast_list,\n",
+    "l3_analysis_equalRange = pipeline.get_group_workflow(\n",
     "    \"equalRange\",\n",
-    "    exp_dir,\n",
-    "    output_dir,\n",
-    "    working_dir,\n",
-    "    result_dir,\n",
-    "    data_dir,\n",
     ")\n",
-    "\n",
-    "l3_analysis_equalIndiff = team_X19V.get_group_workflow(\n",
-    "    subject_list,\n",
-    "    n_sub,\n",
-    "    contrast_list,\n",
+    "l3_analysis_equalIndiff = pipeline.get_group_workflow(\n",
     "    \"equalIndifference\",\n",
-    "    exp_dir,\n",
-    "    output_dir,\n",
-    "    working_dir,\n",
-    "    result_dir,\n",
-    "    data_dir,\n",
     ")\n",
-    "l3_analysis_groupComp = team_X19V.get_group_workflow(\n",
-    "    subject_list,\n",
-    "    n_sub,\n",
-    "    contrast_list,\n",
+    "l3_analysis_groupComp = pipeline.get_group_workflow(\n",
     "    \"groupComp\",\n",
-    "    exp_dir,\n",
-    "    output_dir,\n",
-    "    working_dir,\n",
-    "    result_dir,\n",
-    "    data_dir,\n",
     ")"
    ]
   },
@@ -510,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_X19V.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
+    "pipeline.reorganize_results()"
    ]
   }
  ],
