--- a/examples/notebooks/reproduction_X19V.ipynb
+++ b/examples/notebooks/reproduction_X19V.ipynb
@@ -12,10 +12,7 @@
     "**To use this notebook :** \n",
     "- Download fMRIprep data available [**here**](https://openneuro.org/datasets/ds001734/versions/1.0.4) or in [**datalad**](http://datasets.datalad.org/?dir=/workshops/nih-2017/ds001734).\n",
     "- Modify the paths:\n",
-    "    - **exp_dir**: directory where the ds001734-download repository is stored\n",
-    "    - **result_dir**: directory where the intermediate and final repositories will be stored\n",
-    "    - **working_dir**: name of the directory where intermediate results will be stored\n",
-    "    - **output_dir**: name of the directory where final results will be stored\n",
+    "    - **root_dir**: directory where the ds001734-download repository is stored\n",
     "\n",
     "Botvinik-Nezer, R., Holzmeister, F., Camerer, C.F., Dreber, A., Huber, J., Johannesson, M., Kirchler, M., Iwanir, R., Mumford, J.A., ..., Nichols, T.E., Poldrack, R.A., Schonberg, T. (2020). Variability in the analysis of a single neuroimaging dataset by many teams. Nature. https://doi.org/10.1038/s41586-020-2314-9."
    ]
@@ -28,7 +25,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from narps_open.pipelines import team_X19V_new"
+    "from narps_open.pipelines import team_X19V"
    ]
   },
   {
@@ -50,15 +47,7 @@
     "exp_dir = root_dir / \"original\" / \"ds001734\"\n",
     "\n",
     "## result_dir : where the intermediate and final results will be store\n",
-    "results_dir = root_dir / \"derived\" / \"reproduced\"\n",
-    "\n",
-    "## output_dir : where the final results will be store\n",
-    "output_dir = f\"NARPS-{team_ID}-reproduced\"\n",
-    "\n",
-    "## working_dir : where the intermediate outputs will be store\n",
-    "working_dir = Path(output_dir) / \"intermediate_results\"\n",
-    "\n",
-    "data_dir = root_dir / \"derived\" / \"original\""
+    "results_dir = root_dir / \"derived\" / \"reproduced\""
    ]
   },
   {
@@ -103,22 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "cultural-cursor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contrast_list = [\"1\", \"2\", \"3\", \"4\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "local-reform",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = team_X19V_new.PipelineTeamX19V(bids_dir=exp_dir, subject_list=subject_list)\n",
+    "pipeline = team_X19V.PipelineTeamX19V(bids_dir=exp_dir, subject_list=subject_list)\n",
     "pipeline.directories.results_dir = results_dir\n",
     "pipeline.directories.set_output_dir_with_team_id(pipeline.team_id)\n",
     "pipeline.directories.set_working_dir_with_team_id(pipeline.team_id)\n",
@@ -159,7 +138,7 @@
     "l1_analysis.write_graph(graph2use=\"orig\")\n",
     "Image(\n",
     "    filename=pipeline.directories.results_dir\n",
-    "    / working_dir\n",
+    "    / pipeline.directories.working_dir\n",
     "    / \"l1_analysis\"\n",
     "    / \"graph.png\"\n",
     ")"
@@ -408,16 +387,6 @@
    "metadata": {},
    "source": [
     "## Third level analysis - Group level "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96942013",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_sub = len(subject_list)"
    ]
   },
   {
