--- a/examples/notebooks/reproduction_R9K3.ipynb
+++ b/examples/notebooks/reproduction_R9K3.ipynb
@@ -59,11 +59,11 @@
     }
    ],
    "source": [
-    "# Set the path to matlab \n",
+    "# Set the path to matlab\n",
     "## NECESSARY TO USE SPM\n",
     "from nipype.interfaces import spm\n",
     "\n",
-    "matlab_cmd = '/opt/spm12-r7771/run_spm12.sh /opt/matlabmcr-2010a/v713/ script'\n",
+    "matlab_cmd = \"/opt/spm12-r7771/run_spm12.sh /opt/matlabmcr-2010a/v713/ script\"\n",
     "spm.SPMCommand.set_mlab_paths(matlab_cmd=matlab_cmd, use_mcr=True)"
    ]
   },
@@ -113,10 +113,10 @@
     "# Run to use for this analysis\n",
     "run_list = [\"01\", \"02\", \"03\", \"04\"]\n",
     "\n",
-    "#TR\n",
-    "with open(opj(cfg[\"directories\"][\"exp\"], \"task-MGT_bold.json\"), 'rt') as fp:\n",
+    "# TR\n",
+    "with open(opj(cfg[\"directories\"][\"exp\"], \"task-MGT_bold.json\"), \"rt\") as fp:\n",
     "    task_info = json.load(fp)\n",
-    "TR = task_info['RepetitionTime']"
+    "TR = task_info[\"RepetitionTime\"]"
    ]
   },
   {
@@ -137,13 +137,13 @@
    "outputs": [],
    "source": [
     "preprocessing = team_R9K3_wip.get_preprocessing(\n",
-    "    exp_dir= cfg[\"directories\"][\"exp\"],\n",
-    "    result_dir= cfg[\"directories\"][\"result\"],\n",
-    "    working_dir= cfg[\"directories\"][\"working\"],\n",
-    "    output_dir= cfg[\"directories\"][\"output\"],\n",
-    "    subject_list= cfg[\"subject_list\"],\n",
-    "    run_list= run_list,\n",
-    "    fwhm= cfg[\"func_fwhm\"],\n",
+    "    exp_dir=cfg[\"directories\"][\"exp\"],\n",
+    "    result_dir=cfg[\"directories\"][\"result\"],\n",
+    "    working_dir=cfg[\"directories\"][\"working\"],\n",
+    "    output_dir=cfg[\"directories\"][\"output\"],\n",
+    "    subject_list=cfg[\"subject_list\"],\n",
+    "    run_list=run_list,\n",
+    "    fwhm=cfg[\"func_fwhm\"],\n",
     ")"
    ]
   },
