Updating 2T6S notebook [skip ci]

--- a/examples/notebooks/reproduction_2T6S.ipynb
+++ b/examples/notebooks/reproduction_2T6S.ipynb
@@ -13,112 +13,68 @@
    "id": "digital-murray",
    "metadata": {},
    "source": [
-    "This notebook reproduce the analysis made by team **2T6S** for the NARPS experiment (Botvinik-Nezer & al, 2020). \n",
+    "This notebook reproduces the analysis made by team **2T6S** for the NARPS experiment (Botvinik-Nezer & al, 2020). \n",
     "\n",
     "**To use this notebook :** \n",
-    "- Download fMRIprep data available [**here**](https://openneuro.org/datasets/ds001734/versions/1.0.4) or in [**datalad**](http://datasets.datalad.org/?dir=/workshops/nih-2017/ds001734).\n",
+    "- Follow the [instructions](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/INSTALL.md) to get the input data (only derivatives are needed.\n",
     "- Modify the paths:\n",
-    "    - **exp_dir**: directory where the ds001734-download repository is stored\n",
-    "    - **result_dir**: directory where the intermediate and final repositories will be stored\n",
-    "    - **working_dir**: name of the directory where intermediate results will be stored\n",
-    "    - **output_dir**: name of the directory where final results will be stored\n",
-    "\n",
-    "Botvinik-Nezer, R., Holzmeister, F., Camerer, C.F., Dreber, A., Huber, J., Johannesson, M., Kirchler, M., Iwanir, R., Mumford, J.A., ..., Nichols, T.E., Poldrack, R.A., Schonberg, T. (2020). Variability in the analysis of a single neuroimaging dataset by many teams. Nature. https://doi.org/10.1038/s41586-020-2314-9."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "satellite-launch",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the path to matlab \n",
-    "## NECESSARY TO USE SPM\n",
-    "from nipype.interfaces import spm\n",
-    "matlab_cmd = '/opt/spm12-r7771/run_spm12.sh /opt/matlabmcr-2010a/v713/ script'\n",
-    "spm.SPMCommand.set_mlab_paths(matlab_cmd=matlab_cmd, use_mcr=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "digital-intention",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from narps_open.pipelines import team_2T6S\n",
-    "\n",
-    "from os.path import join as opj\n",
-    "import os\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "occasional-rotation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "team_ID = \"2T6S\"\n",
-    "# Important directories\n",
-    "## exp_dir : where the data are stored (where the ds001734 directory is stored)\n",
-    "exp_dir = '../data/original'\n",
-    "\n",
-    "## result_dir : where the intermediate and final results will be store\n",
-    "result_dir = \"../data/derived/reproduced\"\n",
-    "\n",
-    "## working_dir : where the intermediate outputs will be store\n",
-    "working_dir = f\"NARPS-{team_ID}-reproduced/intermediate_results\"\n",
-    "\n",
-    "## output_dir : where the final results will be store\n",
-    "output_dir = f\"NARPS-{team_ID}-reproduced\""
+    "    - `dataset_dir`: directory where the ds001734 repository is stored\n",
+    "    - `result_dir`: directory where the intermediate and final results will be stored\n",
+    "- Select the number of cores on which you want to run the analysis (`nb_cores`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "systematic-worry",
+   "id": "digital-intention",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_list = os.listdir(exp_dir)"
+    "from os.path import isfile\n",
+    "from narps_open.pipelines.team_2T6S import PipelineTeam2T6S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "id": "occasional-rotation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change these values if needed\n",
+    "dataset_dir = '/work/data/original'\n",
+    "results_dir = '/work/data/reproduced'\n",
+    "nb_cores = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "separate-trade",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Subject list (to which we will do the analysis)\n",
-    "subject_list = []\n",
-    "for dirs in dir_list:\n",
-    "    if dirs[0:3] == 'sub':\n",
-    "        subject_list.append(dirs[-3:])"
+    "subject_list = ['020', '001', '070', '013']\n",
+    "\n",
+    "# Runs to use for this analysis\n",
+    "run_list = ['01', '02', '03', '04']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "convenient-virus",
+   "id": "83180b3e-bd2c-456b-93d9-90aa702378eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_list=['001']\n",
-    "n_sub = len(subject_list)\n",
-    "# Run to use for this analysis\n",
-    "run_list = ['01', '02', '03', '04']\n",
-    "\n",
-    "#TR\n",
-    "with open(opj(exp_dir, 'task-MGT_bold.json'), 'rt') as fp:\n",
-    "    task_info = json.load(fp)\n",
-    "TR = task_info['RepetitionTime']\n",
-    "\n",
-    "#FWHM to smooth (team chose a kernel of 8mm for smoothing)\n",
-    "fwhm = 8"
+    "pipeline = PipelineTeam2T6S()\n",
+    "pipeline.subject_list = subject_list\n",
+    "pipeline.run_list = run_list\n",
+    "pipeline.directories.dataset_dir = dataset_dir\n",
+    "pipeline.directories.results_dir = results_dir\n",
+    "pipeline.directories.set_output_dir_with_team_id('2T6S')\n",
+    "pipeline.directories.set_working_dir_with_team_id('2T6S')"
    ]
   },
   {
@@ -136,8 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1_analysis = team_2T6S.get_l1_analysis(subject_list, TR, fwhm, run_list, exp_dir, \n",
-    "                                             result_dir, working_dir, output_dir)"
+    "subject_level_analysis = pipeline.get_subject_level_analysis()"
    ]
   },
   {
@@ -149,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "l1_analysis.run('MultiProc', plugin_args={'n_procs': 2})"
+    "subject_level_analysis.run('MultiProc', plugin_args = {'n_procs': nb_cores})"
    ]
   },
   {
@@ -163,22 +118,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intimate-upgrade",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contrast_list = ['01', '02', '03', '04']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "silent-twist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_indiff = team_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalIndifference\", \n",
-    "                                                          exp_dir, result_dir, working_dir, output_dir)"
+    "# Get workflows for the group level analyses in the equalIndifference (ei) equalRange (er) and group comparison (gc) cases\n",
+    "group_level_analysis_ei, group_level_analysis_er, group_level_analysis_gc = pipeline.get_group_level_analysis()"
    ]
   },
   {
@@ -188,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_indiff.run('MultiProc', plugin_args={'n_procs': 8})"
+    "group_level_analysis_ei.run('MultiProc', plugin_args = {'n_procs': nb_cores})"
    ]
   },
   {
@@ -198,8 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_range = team_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"equalRange\", \n",
-    "                                                          exp_dir, result_dir, working_dir, output_dir)"
+    "group_level_analysis_er.run('MultiProc', plugin_args = {'n_procs': nb_cores})"
    ]
   },
   {
@@ -209,39 +153,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2_analysis_equal_range.run('MultiProc', plugin_args={'n_procs': 2})"
+    "group_level_analysis_gc.run('MultiProc', plugin_args = {'n_procs': nb_cores})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "216140b0-f15e-4e18-80d4-8552d887c249",
+   "metadata": {},
+   "source": [
+    "## Check results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "05dc2724-6e68-4158-9103-535275297486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0002/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0002/spmT_0001.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0002/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0002/spmT_0001.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0002/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0002/spmT_0001.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0002/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0002/spmT_0001.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0003/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0003/spmT_0001.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0003/_threshold1/spmT_0002_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0003/spmT_0002.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0003/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalIndifference_nsub_4/_contrast_id_0003/spmT_0001.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0003/_threshold1/spmT_0002_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_equalRange_nsub_4/_contrast_id_0003/spmT_0002.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_groupComp_nsub_4/_contrast_id_0003/_threshold0/spmT_0001_thr.nii', '/work/data/reproduced/NARPS-2T6S-reproduced/l2_analysis_groupComp_nsub_4/_contrast_id_0003/spmT_0001.nii']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the list of non existing hypotheses files\n",
+    "hypothesis_files = pipeline.get_hypotheses_outputs()\n",
+    "print([f for f in hypothesis_files if not isfile(f)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powered-agent",
+   "id": "13cee529-aea0-408f-9992-2004f41c26b7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "l2_analysis_groupcomp = team_2T6S.get_l2_analysis(subject_list, n_sub, contrast_list, \"groupComp\", \n",
-    "                                                          exp_dir, result_dir, working_dir, output_dir)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abstract-charger",
+   "id": "56270182-17a6-41e9-95d8-5b1076933751",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "l2_analysis_groupcomp.run('MultiProc', plugin_args={'n_procs': 8})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "convenient-idaho",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipelines_2T6S.reorganize_results(result_dir, output_dir, n_sub, team_ID)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -260,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
